--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,36 @@
 *.o
 *.obj
 
+# Ignore CLion project files
+.idea/
+*.iml
+.idea/workspace.xml
+.idea/misc.xml
+
+# Ignore build directory
+cmake-build-debug/
+cmake-build-release/
+
+# Ignore CMake generated files
+CMakeCache.txt
+CMakeFiles/
+CMakeLists.txt.user
+Makefile
+*.cmake
+
+# Ignore compiled object files
+*.o
+*.obj
+*.exe
+*.dll
+*.log
+
+# Ignore user-specific CLion settings
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/misc.xml
+
+
 # Precompiled Headers
 *.gch
 *.pch
